hero section responsive fixed

--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
     <main>
       <!-- hero section  -->
       <section
-        class="h-screen pt-20 bg-cover bg-center bg-[url('images/banner.jpg')] flex items-center"
+        class="h-screen mx-5 pt-20 bg-cover bg-center bg-[url('images/banner.jpg')] flex items-center"
       >
-        <div class="w-3/6 pl-8">
+        <div class="w-full md:w-3/6 pl-8">
           <p class="text-white font-bebas">Movie production studio</p>
-          <h1 class="text-white font-bebas text-7xl">Films Made to</h1>
-          <h1 class="text-yellow font-bebas text-7xl">Perfection</h1>
-          <p class="text-white font-mont py-4">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus consectetur possimus unde est repudiandae ipsam et. Molestias vel est vitae facilis? Cupiditate, commodi non. Nostrum et nesciunt quidem, repellat adipisci iste, aut libero, tempora quaerat blanditiis veritatis! Eum dicta labore recusandae ad cumque nobis asperiores delectus laborum reprehenderit, iste quam minus voluptates deserunt debitis accusamus ipsam totam perspiciatis, nisi expedita vitae sapiente? Assumenda eum quibusdam molestiae cumque eaque nesciunt molestias adipisci alias voluptatem iure temporibus perspiciatis, at qui consequatur iusto.
+          <h1 class="text-white font-bebas text-3xl md:text-7xl">Films Made to</h1>
+          <h1 class="text-yellow font-bebas text-3xl md:text-7xl">Perfection</h1>
+          <p class="text-white font-mont font-md py-4">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus consectetur possimus unde est repudiandae ipsam et. Molestias vel est vitae facilis? Cupiditate, commodi non.
           </p>
           <button
             class="border text-white py-2 px-5 font-bebas hover:bg-yellow hover:border-yellow hover:text-black transition-all"
