movies hover animation added

--- a/index.html
+++ b/index.html
@@ -154,13 +154,14 @@
           <div class="">
             <div class="border-2 p-5 border-white">
               <div
-                class="text-white w-full h-[350px] bg-cover bg-center bg-[url('images/tenet.jpg')] flex items-center justify-center"
+                class="text-white w-full h-[350px] group bg-cover bg-center bg-[url('images/tenet.jpg')]  flex items-center justify-center relative transition-all delay-75"
               >
+              <div class="h-full w-full bg-black opacity-50 absolute hidden group-hover:block"></div>
                 <a
-                  href="http://"
+                  href="https://www.imdb.com/title/tt6723592/"
                   target="_blank"
                   rel="noopener noreferrer"
-                  class="text-5xl font-bebas"
+                  class="text-5xl z-10 font-bebas hidden group-hover:block hover:bg-cover"
                 >
                   Tenet</a
                 >
@@ -171,15 +172,16 @@
           <div class="">
             <div class="border-2 p-5 border-white">
               <div
-                class="text-white w-full h-[350px] bg-cover bg-center bg-[url('images/tenet.jpg')] flex items-center justify-center"
+                class="text-white w-full h-[350px] group bg-cover bg-center bg-[url('images/inception.jpg')]  flex items-center justify-center relative transition-all delay-75"
               >
+              <div class="h-full w-full bg-black opacity-50 absolute hidden group-hover:block"></div>
                 <a
-                  href="http://"
+                  href="https://www.imdb.com/title/tt1375666/"
                   target="_blank"
                   rel="noopener noreferrer"
-                  class="text-5xl font-bebas"
+                  class="text-5xl z-10 font-bebas hidden group-hover:block hover:bg-cover"
                 >
-                  Tenet</a
+                  Inception</a
                 >
               </div>
             </div>
@@ -188,15 +190,16 @@
           <div class="">
             <div class="border-2 p-5 border-white">
               <div
-                class="text-white w-full h-[350px] bg-cover bg-center bg-[url('images/tenet.jpg')] flex items-center justify-center"
+                class="text-white w-full h-[350px] group bg-cover bg-center bg-[url('images/interstellar.jpg')]  flex items-center justify-center relative transition-all delay-75"
               >
+              <div class="h-full w-full bg-black opacity-50 absolute hidden group-hover:block"></div>
                 <a
-                  href="http://"
+                  href="https://www.imdb.com/title/tt0816692/"
                   target="_blank"
                   rel="noopener noreferrer"
-                  class="text-5xl font-bebas"
+                  class="text-5xl z-10 font-bebas hidden group-hover:block hover:bg-cover"
                 >
-                  Tenet</a
+                  Interstellar</a
                 >
               </div>
             </div>
@@ -205,19 +208,21 @@
           <div class="">
             <div class="border-2 p-5 border-white">
               <div
-                class="text-white w-full h-[350px] bg-cover bg-center bg-[url('images/tenet.jpg')] flex items-center justify-center"
+                class="text-white w-full h-[350px] group bg-cover bg-center bg-[url('images/fractured.jpg')]  flex items-center justify-center relative transition-all delay-75"
               >
+              <div class="h-full w-full bg-black opacity-50 absolute hidden group-hover:block"></div>
                 <a
-                  href="http://"
+                  href="https://www.imdb.com/title/tt4332232/"
                   target="_blank"
                   rel="noopener noreferrer"
-                  class="text-5xl font-bebas"
+                  class="text-5xl z-10 font-bebas hidden group-hover:block hover:bg-cover"
                 >
-                  Tenet</a
+                  Fractured</a
                 >
               </div>
             </div>
           </div>
+          
         </div>
       </section>
       <!-- Services Section -->
