nav z-index fixed

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- header & nav section -->
     <header class="relative h-20 flex justify-center">
       <nav
-        class="font-bebas flex items-center justify-around bg-white bg-opacity-70 py-4 fixed top-0 left-0 right-0 left-0"
+        class="font-bebas flex items-center justify-around bg-white bg-opacity-70 py-4 fixed top-0 right-0 left-0 z-20"
       >
         <a href="#"><h1 class="text-4xl md:text-5xl text-center md:text-left">Jhaka Naka Production</h1></a>
         <ul class="flex justify-evenly gap-3 hidden md:flex text-2xl">
